frontend/test/should_fail/index_exec_edge_countFromIndexFromTo_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s
{
	{ i:byte=countEdgesFromIndex(bari) }
}
